--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -429,6 +429,9 @@ $btn-active-box-shadow:         inset 0 .2rem .3rem rgba(0,0,0,.125) !default;
 $btn-default-color:             $uibase-500 !default;
 $btn-default-bg:                $white !default;
 $btn-default-border:            $uibase-500 !default;
+$btn-default-hover-color:       $uibase-600 !default;
+$btn-default-hover-bg:          $uibase-75 !default;
+$btn-default-hover-border:      $uibase-700 !default;
 
 $btn-link-disabled-color:       $uibase-400 !default;
 
