--- a/scss/core/_buttons.scss
+++ b/scss/core/_buttons.scss
@@ -29,23 +29,20 @@
         text-decoration: none;
     }
 
-    &:active,
-    &.active {
-        // Remove the gradient for the pressed/active state
-        background-image: none;
-        outline: 0;
-        @include box-shadow($btn-active-box-shadow);
-    }
-
-    .open > &.dropdown-toggle {
-        @include box-shadow($btn-active-box-shadow);
-    }
-
+    // Disabled comes first so active can restyle
     &.disabled,
     &:disabled {
         cursor: $cursor-disabled;
         opacity: .6;
         @include box-shadow(none);
+    }
+
+    &:active,
+    &.active,
+    .open > &.dropdown-toggle {
+        // Remove the gradient for the pressed/active state
+        background-image: none;
+        @include box-shadow($btn-active-box-shadow);
     }
 }
 
@@ -58,23 +55,26 @@ fieldset[disabled] a.btn {
 
 // Base colors
 .btn {
-    @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border);
+    @include button-variant($btn-default-color, $btn-default-bg, $btn-default-border, $btn-default-hover-color, $btn-default-hover-bg, $btn-default-hover-border);
 }
 @each $theme, $colors in $context-themes {
-    $color:     map-get($colors, "control-color");
-    $bg:        map-get($colors, "control-bg");
-    $border:    map-get($colors, "control-border");
+    $color:        map-get($colors, "control-color");
+    $bg:           map-get($colors, "control-bg");
+    $border:       map-get($colors, "control-border");
+    $hover-color:  map-get($colors, "control-hover-color");
+    $hover-bg:     map-get($colors, "control-hover-bg");
+    $hover-border: map-get($colors, "control-hover-border");
 
     .btn-#{$theme} {
-        @include button-variant($color, $bg, $border);
+        @include button-variant($color, $bg, $border, $hover-color, $hover-bg, $hover-border);
     }
 }
 
 
 // Outline variant - remove all backgrounds
 @each $theme, $colors in $context-themes {
-    $color:     map-get($colors, "control-bg");
-    $border:    map-get($colors, "control-border");
+    $color:        map-get($colors, "control-bg");
+    $border:       map-get($colors, "control-border");
 
     .btn-outline-#{$theme} {
         @include button-outline-variant($color, $border);
@@ -85,7 +85,7 @@ fieldset[disabled] a.btn {
 // Link buttons
 // Make a button look and behave like a link
 .btn-link {
-    @include button-variant($link-color, transparent, transparent);
+    @include button-variant($link-color, transparent, transparent, $link-hover-color, transparent, transparent);
     @include box-shadow(none);
 
     @include hover-focus {
@@ -93,26 +93,17 @@ fieldset[disabled] a.btn {
         text-decoration: $link-hover-decoration;
     }
 
+    &.disabled,
+    &:disabled {
+        color: $link-color;
+        text-decoration: none;
+    }
+
     &:active,
     &.active,
     .open > &.dropdown-toggle {
         color: $link-hover-color;
         @include box-shadow(none);
-
-        &:focus,
-        &.focus,
-        &:hover {
-            color: darken($link-hover-color, 25%);
-        }
-    }
-
-    &:disabled {
-        @include hover-focus {
-            color: $link-color;
-            text-decoration: none;
-            background-color: transparent;
-            border-color: transparent;
-        }
     }
 }
 
