--- a/scss/component/_pagination.scss
+++ b/scss/component/_pagination.scss
@@ -58,6 +58,7 @@
     border: $pagination-border-width solid $pagination-border-color;
 
     @include hover-focus {
+        z-index: 2;
         color: $pagination-hover-color;
         text-decoration: none;
         background-color: $pagination-hover-bg;
