--- a/docs/assets/scss/_player.scss
+++ b/docs/assets/scss/_player.scss
@@ -312,3 +312,23 @@
 .player-describe.active > .off {
     display: none;
 }
+
+.player-caption-display {
+    position: absolute;
+    bottom: 1rem;
+    left: 50%;
+    display: block;
+    padding: .25rem;
+    max-width: 100%;
+    font-size: .9375rem;
+    text-align: center;
+    color: #fff;
+    background-color: rgba(0,0,0,.65);
+    border-radius: .25rem;
+    transform: translateX(-50%);
+}
+.player-fulldisplay .player-caption-display {
+    bottom: 5rem;
+    padding: .5rem 1rem;
+    font-size: 1.25rem;
+}
