--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -204,6 +204,7 @@
 
 .cf-clipboard {
   position: relative;
+  z-index: 2;
   display: block;
   float: right;
   line-height: 1;
@@ -406,6 +407,7 @@ h4 > code {
 }
 
 .highlight {
+  position: relative;
   margin-bottom: 1rem;
   color: #393939;
   background-color: #f8f8f8;
