--- a/scss/utilities/_float.scss
+++ b/scss/utilities/_float.scss
@@ -2,11 +2,11 @@
     $bprule: breakpoint-designator($breakpoint);
 
     @include media-breakpoint-up($breakpoint) {
-        .float#{$bprule}-left {
-            @include float-left;
+        .float#{$bprule}-start {
+            @include float-start;
         }
-        .float#{$bprule}-right {
-            @include float-right;
+        .float#{$bprule}-end {
+            @include float-end;
         }
         .float#{$bprule}-none {
             @include float-none;
