Rework header a bit, move about to footer

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -4,6 +4,7 @@
             Current version: {{ site.current_version }}
         </p>
         <ul class="footer-links d-inline-block d-sm-block mx-auto mx-sm-0">
+            <li><a href="{{ site.baseurl }}/about/overview/">About</a></li>
             <li><a href="https://github.com/cast-org/figuration">GitHub Project</a></li>
             <li><a href="https://github.com/cast-org/figuration/issues">Issues</a></li>
             <li><a href="https://twitter.com/figuration_org">Twitter</a></li>
