--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -6,7 +6,7 @@
     <button class="navbar-toggle flex-first mr-0_5" type="button" data-cfw="collapse" data-cfw-collapse-target="#cf-topnav" aria-label="Toggle navigation">
         <span class="cf-header-menu" aria-hidden="true">&#8801;</span>
     </button>
-    <div class="navbar-collapse collapse flex-last flex-lg-unordered" id="cf-topnav">
+    <div class="navbar-collapse collapse flex-last flex-lg-unordered flex-lg-shrink text-nowrap" id="cf-topnav">
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a href="{{ site.baseurl }}/get-started/quick-start/" class="nav-link {% if page.group == "get-started" %}active{% endif %}">Get Started{% if page.group == "get-started" %} <span class="sr-only">(current section)</span>{% endif %}</a>
@@ -25,9 +25,6 @@
             </li>
             <li class="nav-item">
                 <a href="{{ site.baseurl }}/widgets/overview/" class="nav-link {% if page.group == "widgets" %}active{% endif %}">Widgets{% if page.group == "widgets" %} <span class="sr-only">(current section)</span>{% endif %}</a>
-            </li>
-            <li class="nav-item">
-                <a href="{{ site.baseurl }}/about/overview/" class="nav-link {% if page.group == "about" %}active{% endif %}">About{% if page.group == "about" %} <span class="sr-only">(current section)</span>{% endif %}</a>
             </li>
         </ul>
     </div>
@@ -49,8 +46,8 @@
             </a>
             <ul class="dropdown-menu">
                 <li class="dropdown-header">Direction</li>
-                <li><button type="button" class="dropdown-item" id="dir-ltr">Left to right <span aria-hidden="true">(LTR)</span></button></li>
-                <li><button type="button" class="dropdown-item" id="dir-rtl">Right to left <span aria-hidden="true">(RTL)</span></button></li>
+                <li><button type="button" class="dropdown-item" id="dir-ltr">Left-to-right</button></li>
+                <li><button type="button" class="dropdown-item" id="dir-rtl">Right-to-left</button></li>
             </ul>
         </li>
         {% if site.github %}
