--- a/docs/_includes/nav-main.html
+++ b/docs/_includes/nav-main.html
@@ -40,7 +40,7 @@
                 {% include icons/github.svg class="cf-header-icon" %}
             </a>
         </li>
-        <li class="nav-item dropdown dropdown-menu-left">
+        <li class="nav-item dropdown dropdown-menu-reverse">
             <a href="#" role="button" class="nav-link" aria-label="Settings" title="Settings" data-cfw="dropdown">
                 {% include icons/cog.svg class="cf-header-icon" %}
             </a>
