update dropdown var

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -677,7 +677,7 @@ $divider-spacer:        ($spacer / 2) !default;
 // =====
 $dropdown-min-width:            10rem !default;
 $dropdown-padding-y:            .3125rem !default;
-$dropdown-margin-top:           .125rem !default;
+$dropdown-spacer:               .125rem !default;
 $dropdown-bg:                   $white !default;
 $dropdown-border-color:         $uibase-300 !default;
 $dropdown-border-width:         $border-width !default;
