--- a/scss/component/_dropdown.scss
+++ b/scss/component/_dropdown.scss
@@ -51,7 +51,7 @@
     float: left;
     min-width: $dropdown-min-width;
     padding: $dropdown-padding-y 0;
-    margin: $dropdown-margin-top 0 0; // override default ul
+    margin: $dropdown-spacer 0 0; // override default ul
     font-size: $font-size-base;
     color: $body-color;
     text-align: left; // Ensures proper alignment if parent has it changed (e.g., modal footer)
@@ -119,8 +119,7 @@
     > .dropdown-menu {
         top: 0;
         left: 100%;
-        //margin-top: -($dropdown-margin-top + $dropdown-padding-y - $border-width);
-        margin-top: calc(-#{($dropdown-margin-top + $dropdown-padding-y)} + #{$border-width});
+        margin-top: calc(-#{($dropdown-spacer + $dropdown-padding-y)} + #{$border-width});
         @include border-radius($dropdown-attach-border-radius $dropdown-border-radius $dropdown-border-radius $dropdown-border-radius);
     }
 
@@ -218,7 +217,7 @@
         top: auto;
         bottom: 100%;
         margin-top: 0;
-        margin-bottom: $dropdown-margin-top;
+        margin-bottom: $dropdown-spacer;
         @include border-radius($dropdown-border-radius $dropdown-border-radius $dropdown-border-radius $dropdown-attach-border-radius);
     }
 
@@ -227,7 +226,7 @@
             top: auto;
             bottom: 0;
             margin-top: 0;
-            margin-bottom: calc(-#{($dropdown-margin-top + $dropdown-padding-y)} + #{$border-width});
+            margin-bottom: calc(-#{($dropdown-spacer + $dropdown-padding-y)} + #{$border-width});
             @include border-radius($dropdown-border-radius $dropdown-border-radius $dropdown-border-radius $dropdown-attach-border-radius);
         }
     }
