--- a/docs/assets/css/docs-rtl.css
+++ b/docs/assets/css/docs-rtl.css
@@ -15,8 +15,8 @@
 
 .skipnav:focus {
   top: .5rem;
-  left: 50%;
-  margin-left: -6em;
+  right: 50%;
+  margin-right: -6em;
   color: #000;
 }
 
@@ -26,7 +26,7 @@
 }
 
 .cf-header .navbar-brand {
-  margin-right: .5rem;
+  margin-left: .5rem;
 }
 
 .cf-header .navbar-brand-logo {
@@ -40,7 +40,7 @@
     padding-top: .5rem;
   }
   .cf-header .navbar-collapse .nav-link {
-    padding-left: .5rem;
+    padding-right: .5rem;
   }
 }
 
@@ -76,13 +76,13 @@
 }
 
 .cf-header-social .nav-link {
-  padding-right: .5rem;
   padding-left: .5rem;
+  padding-right: .5rem;
 }
 
 .cf-header-social .dropdown-menu {
   position: absolute !important;
-  float: left !important;
+  float: right !important;
 }
 
 .cf-header-menu {
@@ -106,7 +106,7 @@
 }
 
 .home-icons .fa + .fa {
-  margin-left: .5rem;
+  margin-right: .5rem;
 }
 
 .home-feature > .small {
@@ -127,7 +127,7 @@
   background-color: rgba(255, 255, 255, 0.15);
   border-color: rgba(255, 255, 255, 0.8);
   border-width: 2px;
-  box-shadow: 2px 2px 0.2rem rgba(0, 0, 0, 0.35);
+  box-shadow: -2px 2px 0.2rem rgba(0, 0, 0, 0.35);
 }
 
 .btn-start:focus, .btn-start:hover {
@@ -139,7 +139,7 @@
   padding: 2rem 1.5rem;
   margin-bottom: 2rem;
   color: rgba(255, 255, 255, 0.9);
-  background-image: linear-gradient(135deg, #0c5782 0%, #117cba 100%);
+  background-image: linear-gradient(-135deg, #0c5782 0%, #117cba 100%);
 }
 
 .jumbotron-home .logo-home {
@@ -178,7 +178,7 @@
 @media (min-width: 48em) {
   .container-divider.col, .container-divider[class*="col-"] {
     border-top: 0;
-    border-left: 1px solid rgba(0, 0, 0, 0.5);
+    border-right: 1px solid rgba(0, 0, 0, 0.5);
   }
 }
 
@@ -186,7 +186,7 @@
   padding: .5rem .375rem;
   margin-bottom: 0;
   color: rgba(255, 255, 255, 0.9);
-  background-image: linear-gradient(135deg, #0c5782 0%, #117cba 100%);
+  background-image: linear-gradient(-135deg, #0c5782 0%, #117cba 100%);
 }
 
 @media (min-width: 36em) {
@@ -212,7 +212,7 @@
   position: relative;
   z-index: 2;
   display: block;
-  float: right /*rtl:ignore*/;
+  float: right ;
   line-height: 1;
 }
 
@@ -227,11 +227,11 @@
 .btn-clipboard {
   position: absolute;
   top: 0;
-  right: 0 /*rtl:ignore*/;
+  right: 0 ;
 }
 
 #markdown-toc ul {
-  padding-left: 2rem;
+  padding-right: 2rem;
   margin-top: .25rem;
   margin-bottom: .25rem;
 }
@@ -246,7 +246,7 @@
 @media (min-width: 48em) {
   .cf-sidebar {
     padding-bottom: 3rem;
-    border-right: 1px solid #c2c2c2;
+    border-left: 1px solid #c2c2c2;
     border-bottom: 0;
   }
 }
@@ -293,10 +293,10 @@
 .cf-toc .section-toc {
   padding-top: .5rem;
   padding-bottom: .5rem;
-  padding-left: 1rem;
+  padding-right: 1rem;
   margin-bottom: 0;
   list-style: none;
-  border-left: 1px solid #8ac;
+  border-right: 1px solid #8ac;
 }
 
 @supports ((position: -webkit-sticky) or (position: sticky)) {
@@ -311,7 +311,7 @@
 }
 
 .cf-toc .section-toc ul {
-  padding-left: .875rem;
+  padding-right: .875rem;
   list-style: none;
 }
 
@@ -324,7 +324,7 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  left: -1rem;
+  right: -1rem;
   display: block;
   width: .1875rem;
   font-size: 5rem;
@@ -334,15 +334,15 @@
 }
 
 .cf-toc .section-toc .section-toc-h3 {
-  padding-left: .875rem;
+  padding-right: .875rem;
 }
 
 .cf-toc .section-toc .section-toc-h4 {
-  padding-left: 1.75rem;
+  padding-right: 1.75rem;
 }
 
 .cf-toc .section-toc .section-toc-h5 {
-  padding-left: 2.625rem;
+  padding-right: 2.625rem;
 }
 
 .cf-title {
@@ -362,8 +362,8 @@
 @media (min-width: 48em) {
   .cf-content {
     padding-top: 1.5rem;
-    padding-right: 2.5rem;
     padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 }
 
@@ -390,8 +390,8 @@ h4 > code {
 
 .cf-example + .cf-clipboard + .highlight {
   border-top: 0;
-  border-top-right-radius: 0;
   border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
 @media (min-width: 36em) {
@@ -408,8 +408,8 @@ h4 > code {
 
 .cf-example-bottom {
   margin-bottom: 1rem;
-  border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
+  border-bottom-right-radius: 0.25rem;
 }
 
 .highlight {
@@ -422,10 +422,10 @@ h4 > code {
 }
 
 .highlight pre {
-  direction: ltr /*rtl:ignore*/;
+  direction: ltr ;
   padding: 1.65rem 1rem .5rem;
   margin: 0;
-  text-align: left /*rtl:ignore*/;
+  text-align: left ;
   background-color: transparent;
   border: 0;
 }
@@ -472,7 +472,7 @@ h4 > code {
   padding: 1rem;
   margin: 1rem 0;
   border: 1px solid #a3a3a3;
-  border-left-width: .5rem;
+  border-right-width: .5rem;
   border-radius: 0.25rem;
 }
 
@@ -604,7 +604,7 @@ h4 > code {
   padding: 2rem 0;
   margin-top: 2rem;
   text-align: center;
-  background-image: linear-gradient(135deg, #117cba 0%, #0c5782 100%);
+  background-image: linear-gradient(-135deg, #117cba 0%, #0c5782 100%);
 }
 
 .cf-feed a {
@@ -629,12 +629,12 @@ h4 > code {
 
 @media (min-width: 36em) {
   .cf-footer {
-    text-align: left;
+    text-align: right;
   }
 }
 
 .footer-links {
-  padding-left: 0;
+  padding-right: 0;
   margin-bottom: 1rem;
   list-style: none;
 }
@@ -646,18 +646,18 @@ h4 > code {
 }
 
 .footer-links li {
-  float: left;
+  float: right;
 }
 
 .footer-links li + li::before {
   display: inline-block;
-  padding-right: .25rem;
   padding-left: .25rem;
+  padding-right: .25rem;
   content: "-";
 }
 
 .footer-partners {
-  text-align: left;
+  text-align: right;
 }
 
 .footer-partners .partner-title {
@@ -665,18 +665,18 @@ h4 > code {
 }
 
 .cf-docs-keys dt {
-  float: left;
+  float: right;
   width: 4.5rem;
   min-height: 1.75rem;
   overflow: hidden;
-  clear: left;
+  clear: right;
   text-align: center;
   white-space: nowrap;
 }
 
 .cf-docs-keys dd {
   min-height: 1.75rem;
-  margin-left: 5rem;
+  margin-right: 5rem;
 }
 
 .cf-docs-keys dd::after {
@@ -690,7 +690,7 @@ h4 > code {
 }
 
 .cf-team .github-btn {
-  float: right;
+  float: left;
   width: 180px;
   height: 1.25rem;
   margin-top: .25rem;
@@ -707,13 +707,13 @@ h4 > code {
 
 .docsearch {
   width: 100% !important;
-  padding-left: 1.5rem;
+  padding-right: 1.5rem;
 }
 
 .docsearch-wrapper {
   position: relative;
   width: 11rem;
-  margin-left: .5rem;
+  margin-right: .5rem;
   clear: both;
 }
 
@@ -732,7 +732,7 @@ h4 > code {
 .docsearch-wrapper::before {
   position: absolute;
   top: 50%;
-  left: .25rem;
+  right: .25rem;
   z-index: 1;
   display: block;
   width: 1rem;
@@ -816,8 +816,8 @@ h4 > code {
 .cf-example-container {
   min-width: 16rem;
   max-width: 25rem;
-  margin-right: auto;
   margin-left: auto;
+  margin-right: auto;
 }
 
 .cf-example-container-fluid {
@@ -832,7 +832,7 @@ h4 > code {
 }
 
 .cf-example-container-sidebarL {
-  float: left;
+  float: right;
   width: 4rem;
   height: 8rem;
   background-color: #ffc44a;
@@ -840,7 +840,7 @@ h4 > code {
 }
 
 .cf-example-container-sidebarR {
-  float: right;
+  float: left;
   width: 8rem;
   height: 8rem;
   background-color: #f46d62;
@@ -849,8 +849,8 @@ h4 > code {
 
 .cf-example-container-body {
   height: 8rem;
-  margin-right: 8.5rem;
-  margin-left: 4.5rem;
+  margin-left: 8.5rem;
+  margin-right: 4.5rem;
   background-color: #4684c1;
   border-radius: .25rem;
 }
@@ -884,10 +884,10 @@ h4 > code {
   width: 800px;
   width: 100%;
   max-width: 100%;
-  margin-right: auto;
   margin-left: auto;
-  padding-right: 1rem;
+  margin-right: auto;
   padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .example-row {
@@ -895,43 +895,43 @@ h4 > code {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-right: -1rem;
   margin-left: -1rem;
+  margin-right: -1rem;
 }
 
 .example-content-main {
   position: relative;
   width: 100%;
   min-height: 1px;
-  padding-right: 1rem;
   padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 @media (min-width: 36em) {
   .example-content-main {
-    padding-right: 1rem;
     padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
 @media (min-width: 48em) {
   .example-content-main {
-    padding-right: 1rem;
     padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
 @media (min-width: 62em) {
   .example-content-main {
-    padding-right: 1rem;
     padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
 @media (min-width: 75em) {
   .example-content-main {
-    padding-right: 1rem;
     padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
@@ -955,35 +955,35 @@ h4 > code {
   position: relative;
   width: 100%;
   min-height: 1px;
-  padding-right: 1rem;
   padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 @media (min-width: 36em) {
   .example-content-secondary {
-    padding-right: 1rem;
     padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
 @media (min-width: 48em) {
   .example-content-secondary {
-    padding-right: 1rem;
     padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
 @media (min-width: 62em) {
   .example-content-secondary {
-    padding-right: 1rem;
     padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
 @media (min-width: 75em) {
   .example-content-secondary {
-    padding-right: 1rem;
     padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
@@ -1020,18 +1020,18 @@ h4 > code {
       align-items: stretch;
   -ms-flex-pack: start;
       justify-content: flex-start;
-  margin-right: -1rem;
-  margin-bottom: 0;
   margin-left: -1rem;
+  margin-bottom: 0;
+  margin-right: -1rem;
 }
 
 .card-deck-col .card {
   -ms-flex-preferred-size: auto;
       flex-basis: auto;
   width: calc(100% - 2rem);
-  margin-right: 1rem;
-  margin-bottom: 1rem;
   margin-left: 1rem;
+  margin-bottom: 1rem;
+  margin-right: 1rem;
 }
 
 @media (min-width: 35em) {
@@ -1114,21 +1114,21 @@ h4 > code {
 }
 
 .cf-example-dropdown > .dropdown > .dropdown-toggle {
-  float: left;
+  float: right;
 }
 
 .cf-example-dropdown > .dropdown > .dropdown-menu {
   position: static;
   display: block;
   margin-bottom: .25rem;
-  clear: left;
+  clear: right;
 }
 
 .cf-example > .dropdown-menu {
   position: static;
   display: block;
   margin-bottom: .25rem;
-  clear: left;
+  clear: right;
 }
 
 .cf-example > .dropdown + .dropdown,
@@ -1152,7 +1152,7 @@ h4 > code {
 .cf-example-popover .popover {
   position: relative;
   display: block;
-  float: left;
+  float: right;
   width: 16rem;
   margin: 1.25rem;
 }
@@ -1174,7 +1174,7 @@ h4 > code {
 .container-viewport .viewport-text {
   position: absolute;
   top: 65px;
-  left: 50px;
+  right: 50px;
   font-weight: bold;
 }
 
@@ -1188,19 +1188,19 @@ h4 > code {
   min-width: 250px;
   max-width: 500px;
   min-height: 100px;
-  text-align: left;
+  text-align: right;
 }
 
 .container-viewport .btn-bottom {
   position: absolute;
   bottom: 0;
-  left: 0;
+  right: 0;
 }
 
 .container-viewport .btn-drag {
   position: absolute;
   bottom: 0;
-  left: 120px;
+  right: 120px;
 }
 
 .cf-example-scrollspy {
@@ -1224,7 +1224,7 @@ h4 > code {
 .cf-example > [data-cfw="slider"] .slider-vertical {
   width: auto;
   height: 12rem;
-  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .cf-example > [data-cfw="slider"] input {
@@ -1617,8 +1617,8 @@ h4 > code {
 .player-fulldisplay .player-transcript {
   position: absolute;
   top: 0;
-  left: auto;
-  right: 0;
+  right: auto;
+  left: 0;
   width: 25%;
   height: 80%;
 }
@@ -1754,9 +1754,9 @@ h4 > code {
 
 .player-fulldisplay .player-wrapper {
   position: absolute;
-  left: 0;
-  bottom: 20px;
   right: 0;
+  bottom: 20px;
+  left: 0;
   margin-top: 0;
   text-align: center;
 }
@@ -1810,7 +1810,7 @@ h4 > code {
 .player-script-scroll-check .player-script-scroll-check-icon {
   position: absolute;
   top: 50%;
-  left: 5px;
+  right: 5px;
   margin-top: -0.7em;
   color: #5cb85c;
 }
@@ -1908,11 +1908,11 @@ h4 > code {
   display: inline-block;
   position: absolute;
   top: 50%;
-  left: 50%;
+  right: 50%;
   width: 70px;
   height: 70px;
   margin-top: -35px;
-  margin-left: -35px;
+  margin-right: -35px;
   padding: 2px 7px 3px;
   font-family: 'FontAwesome';
   font-size: 66px;
@@ -1971,7 +1971,7 @@ h4 > code {
 .player-caption-display {
   position: absolute;
   bottom: 1rem;
-  left: 50%;
+  right: 50%;
   display: block;
   padding: .25rem;
   max-width: 100%;
@@ -1980,8 +1980,8 @@ h4 > code {
   color: #fff;
   background-color: rgba(0, 0, 0, 0.65);
   border-radius: .25rem;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  -webkit-transform: translateX(50%);
+          transform: translateX(50%);
 }
 
 .player-fulldisplay .player-caption-display {
