--- a/scss/core/_forms.scss
+++ b/scss/core/_forms.scss
@@ -297,10 +297,11 @@ textarea.form-control {
     flex-flow: row wrap;
     align-items: center; // Prevent shorter elements from growing to same height as others (e.g., small buttons growing to normal sized button height)
 
-    // Because we use flex, the initial sizing of checkboxes is collapsed and
-    // doesn't occupy the full-width (which is what we want for xs grid tier),
-    // so we force that here.
-    .form-check {
+    // Because we use flex, the initial sizing of some items is collapsed,
+    // such as groups and checkboxes, and don't occupy the full-width
+    // (which is what we want for xs grid tier), so we force that here.
+    .form-check,
+    .form-group {
         width: 100%;
     }
 
@@ -320,6 +321,7 @@ textarea.form-control {
             flex: 0 0 auto;
             flex-flow: row wrap;
             align-items: center;
+            width: auto;
             margin-bottom: 0;
         }
 
