--- a/scss/utilities/_position.scss
+++ b/scss/utilities/_position.scss
@@ -1,4 +1,21 @@
-﻿// Positioning
+// scss-lint:disable ImportantRule, SpaceBeforeBrace
+
+// Common positioning
+@each $breakpoint in map-keys($grid-breakpoints) {
+    $bprule: breakpoint-designator($breakpoint);
+
+    @include media-breakpoint-up($breakpoint) {
+        .position#{$bprule}-static   { position: static !important; }
+        .position#{$bprule}-relative { position: relative !important; }
+        .position#{$bprule}-absolute { position: absolute !important; }
+        .position#{$bprule}-fixed    { position: fixed !important; }
+        @supports (position: sticky) {
+            .position#{$bprule}-sticky   { position: sticky !important; }
+        }
+    }
+}
+
+// Quick use
 .fixed-top {
     position: fixed;
     top: 0;
