--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -333,7 +333,7 @@ $transition-collapse-y: height .3s ease !default;
 $transition-collapse-x: width .3s ease !default;
 
 // Component transitions
-$btn-transition:            box-shadow .15s ease-in-out !default;
+$btn-transition:            background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
 $input-transition:          border-color .15s ease-in-out, box-shadow .15s ease-in-out !default;
 $modal-transition:          transform .3s ease-out !default;
 $progress-bar-transition:   width .3s ease !default;
